# tic-tac-toe

./: CMakeLists.txt  main.cpp  problem.txt  variables.txt  variables_.txt  winning_cubes.txt
include/: model.hpp  utils.hpp
src/: main.cpp  model.cpp  utils.cpp
